minor changes and fixes, made the tags search more visible.

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -1337,6 +1337,9 @@ a.proposal_link_red:hover {
 	max-height:400px;
 	overflow-y:auto;
 }
+.popover_choice_main table tr td{
+	cursor: pointer;
+}
 
 .templateChoiceButton {
 	text-align:center;
@@ -1348,6 +1351,7 @@ a.proposal_link_red:hover {
 .templateChoiceButton:hover {
 	background-color:#0088cc !important;
 	color:white;
+	cursor: pointer;
 }
 
 .templateChoiceButtonLast {
